# iptables

./: .gitignore
include/linux/netfilter/: x_tables.h
include/linux/netfilter_ipv4/: ip_tables.h
include/linux/netfilter_ipv6/: ip6_tables.h
iptables/: Makefile.am
libxtables/: Makefile.am
